# ChangeLog for dev-util/meld
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/meld/ChangeLog,v 1.123 2011/03/22 19:07:40 ranger Exp $

  22 Mar 2011; Brent Baude <ranger@gentoo.org> meld-1.5.0.ebuild:
  Marking meld-1.5.0 ppc stable for bug 353436

  21 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> meld-1.5.0.ebuild:
  ppc64 stable wrt #353436

*meld-1.5.1 (20 Mar 2011)

  20 Mar 2011; Pacho Ramos <pacho@gentoo.org> -meld-1.4.0.ebuild,
  +meld-1.5.1.ebuild:
  Version bump, remove old.

  12 Mar 2011; Raúl Porcel <armin76@gentoo.org> meld-1.5.0.ebuild:
  alpha/arm/ia64/sparc stable wrt #353436

  24 Feb 2011; Thomas Kahle <tomka@gentoo.org> meld-1.5.0.ebuild:
  x86 stable per bug 353436

  23 Feb 2011; Markos Chandras <hwoarang@gentoo.org> meld-1.5.0.ebuild:
  Stable on amd64 wrt bug #353436

  17 Jan 2011; Pacho Ramos <pacho@gentoo.org> meld-1.5.0.ebuild:
  Drop libgnome-python and libgnome dependencies as reported by Xake in bug
  #351605 and confirmed by Gilles and me.

*meld-1.5.0 (31 Dec 2010)

  31 Dec 2010; Pacho Ramos <pacho@gentoo.org> +meld-1.5.0.ebuild:
  Version bump, no longer uses gnome-vfs, requires at least python-2.5 and
  other fixes.

  23 Nov 2010; Gilles Dartiguelongue <eva@gentoo.org> -meld-1.3.0.ebuild,
  -meld-1.3.2.ebuild, -meld-1.3.3.ebuild:
  Clean up old revisions.

  17 Oct 2010; Gilles Dartiguelongue <eva@gentoo.org> meld-1.4.0.ebuild:
  Fix python eclass usage, per Arfrever comments, bug #326101.

  13 Oct 2010; Gilles Dartiguelongue <eva@gentoo.org> meld-1.4.0.ebuild:
  Improve support of python eclass, bug #326101.

  10 Oct 2010; Justin Lecher <jlec@gentoo.org> meld-1.4.0.ebuild:
  Added prefix support, EAPI=3, keyworded for ~-linux prefix

*meld-1.4.0 (27 Sep 2010)

  27 Sep 2010; Gilles Dartiguelongue <eva@gentoo.org> +meld-1.4.0.ebuild:
  Version bump. Fix RCS support. Fix support of old pygobject.

*meld-1.3.3 (13 Sep 2010)
