@@ -1,8 +1,16 @@
-DIST meld-1.3.1.tar.bz2 795145 RMD160 bf9bace33ddf1d3b6b99e358799316791390cec0 SHA1 d3ab96a364b73afdfd9f26cc9bec18321f04c9df SHA256 d60e735869bb64cc7007466eea3ad639e22eb223c6d5379508ffd0b4f0901647
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST meld-1.5.0.tar.bz2 330845 RMD160 c88302518e924287e68fff0fd7a9c1815dc35753 SHA1 53632204635807b6c3c0eba1d2fbb3b69ba2c13a SHA256 35e75eb3f7b89a6a8a71fafa1e9f0049bc9facd18b0a2a2c54d5d911d098c0cd
 DIST meld-1.5.1.tar.bz2 343099 RMD160 2ebce6f9209295fe67d7e471c8ecac844c9dbc97 SHA1 cf87316307bd3511ba79b5b9144efed87f0edef3 SHA256 822936d58adee8e7dcf6a7872d08803adb190746bf8ac26a23996d58561e727a
-EBUILD meld-1.3.1.ebuild 1874 RMD160 7ee313ceca2f9ffd4dfc772a70adc9657bd7dad6 SHA1 70d7204d2906ee698d821f235ed6aff047e593e0 SHA256 9764fbe9bbf6c1457409d246371119070e6b011f86294f02571c8050ee263d56
 EBUILD meld-1.5.0.ebuild 2380 RMD160 45c8fd5d682ebc149824c2e54eb2fa3236537f1b SHA1 ff73fa8d55ebad759a39ba635275f6a982edf8b5 SHA256 1f8b04ee58cffac66cac1adab5d07b49522b0e7f2527a1a284d1a4de7803eb99
-EBUILD meld-1.5.1.ebuild 2397 RMD160 15df7318c04b30438fca270d4f8aafe088181100 SHA1 f336720b3c4d01a05bf4b299cd0789f46ead94c5 SHA256 8aff1bf6dc0c41900e9581200d469a252c156ee5991787c1de97bdffea59313f
-MISC ChangeLog 16397 RMD160 48f20fe55ceab12ca3a9d7033ce70da2560f3a1a SHA1 824f78dc47bf3ecc30a07cf6851ca697de3a8e9a SHA256 4388b0c7d8af1b56ac724beaa725561fc8e54731144f034c3532333defada8bf
+EBUILD meld-1.5.1.ebuild 2368 RMD160 03c0116864271eb60fe645a02ec9c33f18918c2a SHA1 0a3aa398225ceefc4153583b3b0c3e4b09546bb7 SHA256 36d2011bde1cb4cf10fc8a8d1dc5152ef4908a4a99c4cab340d5c984bfd20218
+MISC ChangeLog 16587 RMD160 5f0e44b5f9e2abc0b70220d34d32d6f49f5eaadd SHA1 865fd15d2e063b25b61847f2a07959b8b853a403 SHA256 5d2c887301632b0de39a4dab2ed1b54eff9c067c847a75c764744c50615cd39b
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEARECAAYFAk2l29MACgkQCaWpQKGI+9SlqACffCajwOlJakJrBDnx6pReXkU5
+UdEAni2vomhMCqYr2qBNiB3eTKipKBeR
+=WMzg
+-----END PGP SIGNATURE-----
