@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/meld
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/meld/ChangeLog,v 1.123 2011/03/22 19:07:40 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/meld/ChangeLog,v 1.124 2011/04/13 17:22:21 pacho Exp $
+
+  13 Apr 2011; Pacho Ramos <pacho@gentoo.org> -meld-1.3.1.ebuild,
+  meld-1.5.1.ebuild:
+  Drop libglade dependency as reported in bug #358153, done in Arch and
+  confirmed by me. Remove old.
 
   22 Mar 2011; Brent Baude <ranger@gentoo.org> meld-1.5.0.ebuild:
   Marking meld-1.5.0 ppc stable for bug 353436
